class AppStrings {
  //App title
  static const String appTitle = "E-Beauty";
  static const String emptyString = "";
  static const String splashContinue = "Continue";

  //route
  static const String noRouteFound = "No Route Found";

  //intro screen Text
  static const String introScreenText1 =
      "Welcome to E-Beauty, Let’s go shopping!";
  static const String introScreenText2 = "Beauty in ease at your hand";
  static const String introScreenText3 =
      "We show the easy way to shop. \nJust stay at home with us";
  static const String continueText = "Continue";
// sign in
  static const String signIn = "Sign In";
  static const String welcomeBack = "Welcome";
  static const String signUpPageText =
      "Sign Up with Email and Password to Join Us";
  static const String rememberMe = "Remember me";
  static const String forgotPassword = "Forgot Password ?";
  static const String password = "Password";
  static const String enterPassword = "Enter your password";
  static const String email = "Email";
  static const String enterEmail = "Enter your email";
  static const String reEnterPassword = "Re-enter your password";
  static const String confirmPassword = "Confirm Password";

  //Error
  static const String kEmailNullError = "Please Enter your email";
  static const String kInvalidEmailError =
      "Please Enter Valid Email or Pasword";
  static const String kPassNullError = "Please Enter your password";
  static const String kShortPassError = "Password is too short";
  static const String kMatchPassError = "Passwords don't match";
  static const String kNamelNullError = "Please Enter your name";
  static const String kPhoneNumberNullError = "Please Enter your phone number";
  static const String kAddressNullError = "Please Enter your address";
  static const String noAccount = "Don't have an account?";
  static const String yesAccount = "Already have an account?";
  static const String signUp = "Sign Up";

  //register
  static const String registerAccount = "Register Account";
  static const String registerPageText =
      "Complete your details or continue \n with social media";
  static const String registerPasswordTextField = "Please Enter your password";
  static const String registerPassword = "Password";
  static const String registerRePasswordTextField =
      "Please Re-enter your password";
  static const String registerRepassword = "Confirm password";
  static const String termsAndConditions =
      "By continuing, you'll confirm that you agree \n with our terms and conditions";

  static const String userName = "Username";
  static const String phoneNumber = "Phonenumber";
  static const String address = "Address";
  static const String completeProfile = "Complete Profile";
  static const String termsAndCondition =
      "By continuing your confirm that you agree \n with our Terms and Condition";

  static const String userNameTextField = "Enter your username";
  static const String phoneNumberTextField = "Enter your phone number";
  static const String addressTextField = "Enter your address";
  static const String searchBarHintText = "Search products";
  static const String seeMoreText = "See More";
  static const String specialForYou = "Special for you";

  //All terms and conditions
  static const String term1 =
      "Ownership of Intellectual Property: All content, including but not limited to text, graphics, logos, and images, is the property of the company and is protected by copyright and other intellectual property laws.";
  static const String term2 =
      "Use of the App: Users should be made aware of any restrictions on the use of the app, such as not using it for any illegal or unauthorized purpose.";
  static const String term3 =
      "User-Generated Content: If the app allows users to post reviews, comments, or other content, it's important to outline any rules for user-generated content and the company's right to remove or edit such content.";
  static const String term4 =
      "Disclaimer of Warranties: The company should disclaim any warranties, express or implied, regarding the app and the products sold through it.";
  static const String term5 =
      "Limitation of Liability: The company should limit its liability for any damages that may arise from the use of the app or the products sold through it.";
  static const String term6 =
      "Privacy Policy: The terms and conditions should include a reference to the app's privacy policy, which outlines how the company collects, uses, and shares personal information.";
  static const String term7 =
      "Changes to the Terms and Conditions: The company should reserve the right to update the terms and conditions at any time, and users should be made aware of this. It's a good idea to include a clause stating that the continued use of the app after any changes to the terms and conditions constitutes acceptance of those changes.";
}
